styles/style.css
:root {
    --clr-background-body: hsl(207, 22%, 10%);
    --clr-background-randomizer: hsl(207, 38%, 14%);
    --clr-background-input: hsl(207, 22%, 10%);
    --clr-background-input--checked: hsl(69, 63%, 59%);
    --clr-heading: hsl(69, 63%, 59%);
}


*,
::after,
::before {
    box-sizing: border-box;
}

* {
    margin: 0;
}

html {
    font-family: "Roboto", sans-serif;
}

body {
    color: white;
    background-color: var(--clr-background-body);
}

img {
    width: 100%;
}

label {
    display: block;
}

input {
    position: absolute;
    left: -99999px;
    opacity: 0;
}

ul {
    list-style: none;
    padding: 0;
    text-align: left;
    line-height: 1.5;
}

.container {
    width: 80%;
    margin: 0 auto;
}

.randomizer {
    width: 90%;
    max-width: 50rem;
    padding-block: 2rem;
    margin-block: 3rem;
    margin-inline: auto;
    background-color: var(--clr-background-randomizer);
    border-radius: 10px;
}

.title {
    position: relative;
    margin-block-end: 1rem;
}

.heading {
    margin-bottom: 1rem;
    color: var(--clr-heading);
    font-size: clamp(1vw, 8vw, 2em);
}

.heading--title {
    position: absolute;
    bottom: 20%;
    right: 5%;
    text-align: center;
    text-shadow: -10px -5px 0 #000;
    font-size: clamp(1vw, 8vw, 3rem);
    transform: rotateX(-24deg) rotateY(40deg);
}

.heading--small {
    font-size: clamp(1vw, 8vw, 1.5em);
}

.expansions__list {
    --gap: .5rem;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: var(--gap);
}

.expansions__item {
    width: 100%;
    margin-block-end: var(--gap);
    text-align: center;
}

.label {
    padding: .5rem;
    color: var(--clr-background-input--checked);
    font-weight: bold;
    background-color: var(--clr-background-input);
    border-radius: 25vw;
}

.label:hover {
    cursor: pointer;
}

.player-ct {
    margin-block-end: 1rem;
}

.player-ct__wrapper {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 1rem;
}

.player-ct__wrapper .label {
    width: 2rem;
    height: 2rem;
    text-align: center;
}

.label:has(+input:checked) {
    background-color: var(--clr-background-input--checked);
    color: var(--clr-background-body);
}

.btn {
    display: block;
    max-width: max-content;
    margin-block: 1rem;
    padding: .5em 1.5em;
    font-size: 1.2rem;
    font-weight: 900;
    letter-spacing: .1em;
    text-decoration: none;
    color: var(--clr-background-body);
    background-color: var(--clr-background-input--checked);
    border-radius: 25vw;
}

.btn:hover {
    cursor: pointer;
    opacity: .8;
    color: white;
}

.btn:active {
    background-color: var(--clr-background-body);
    color: var(--clr-background-input--checked);
}

.factions {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1rem;
}

.alert {
    color: hsl(0, 100%, 66%);
    font-weight: bold;
}

.hide-empty:not(:has(ul > li)) {
    display: none;
}

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
}

@media screen and (max-width: 820px) {
    .randomizer {
        width: 100%;
        margin: 0;
    }
    .expansions__list {
        grid-template-columns: 1fr;
    }
}

@media screen and (max-width: 710px) {
    .factions {
        grid-template-columns: 1fr;
    }
}

